--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,16 @@ description: >- # this means to ignore newlines until "baseurl:"
   world.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: evan_helbig
+github_username:  ehelbig1
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+title: Evan Helbig's blog
+description: Welcome to my blog
+author: Evan Helbig
 
 # Exclude from processing.
 # The following items will not be processed, by default.
