--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
+# Google Analytics
+google_analytics: G-81BWZ10VBE
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
