--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,11 @@ twitter_username: evan_helbig
 github_username:  ehelbig1
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-remote-theme
 
 # Google Analytics
 google_analytics: G-81BWZ10VBE
