Wrote Application Security - Risk post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "ECRs",
+        "Helbig",
         "bugbounties",
+        "ehelbig",
         "endfor",
         "gtag"
     ]
